ka1/kube1/services/kanidm/kanidm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
spec:
  type: ClusterIP
  ports:
    - name: kanidm
      port: 8443
      targetPort: 8443
  selector:
    app: kanidm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanidm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanidm
  template:
    metadata:
      labels:
        app: kanidm
    spec:
      hostname: kanidm
      containers:
        - name: kanidm
          image: docker.io/kanidm/server:1.11.2
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: kanidm-data
              mountPath: /data
            - name: kanidm-config
              subPath: server.toml
              mountPath: /data/server.toml
              readOnly: true
            - name: kanidm-certs
              mountPath: /var/lib/kanidm
              readOnly: true
          imagePullPolicy: Always
      volumes:
        - name: kanidm-data
          persistentVolumeClaim:
            claimName: kanidm-data-pvc
        - name: kanidm-config
          configMap:
            name: kanidm-config
        - name: kanidm-certs
          secret:
            secretName: kanidm-gateway-tls
