ka1/kube1/services/kanidm/kanidm-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kanidm-https-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      lb-pool: reserved
  addresses:
    - type: IPAddress
      value: 10.10.41.251
  listeners:
    - name: https-base
      protocol: HTTPS
      port: 443
      hostname: "brodatzki.id"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kanidm-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-site
      protocol: HTTPS
      port: 443
      hostname: "ka1.brodatzki.id"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kanidm-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-base
      protocol: HTTP
      port: 80
      hostname: "brodatzki.id"
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-site
      protocol: HTTP
      port: 80
      hostname: "ka1.brodatzki.id"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanidm-http-to-https-redirect
spec:
  parentRefs:
    - name: kanidm-https-gateway
      sectionName: http-base
    - name: kanidm-https-gateway
      sectionName: http-site
  hostnames:
    - "brodatzki.id"
    - "ka1.brodatzki.id"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanidm-service-route
spec:
  parentRefs:
    - name: kanidm-https-gateway
      sectionName: https-base
    - name: kanidm-https-gateway
      sectionName: https-site
  hostnames:
    - "brodatzki.id"
    - "ka1.brodatzki.id"
  rules:
    - matches:
        - path:
            type: Exact
            value: /ui/profile
        - path:
            type: Exact
            value: /ui/update_credentials
        - path:
            type: PathPrefix
            value: /ui/reset
        - path:
            type: Exact
            value: /ui/enrol
        - path:
            type: Exact
            value: /ui/radius
        - path:
            type: PathPrefix
            value: /v1
        - path:
            type: PathPrefix
            value: /scim/v1
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: core.brodatzki.id
            statusCode: 302
    - backendRefs:
        - name: kanidm
          port: 8443
